<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="horizontal" >

    <ImageButton
        android:contentDescription="@string/title_bar_button2"
        android:id="@+id/title_bar_button2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/title_bar_button2" 
        android:src= "@drawable/rotate"/>

    <ImageButton
        android:id="@+id/title_bar_button3"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/title_bar_button3" 
        android:src="@drawable/glow"
        android:text="@string/title_bar_button3" />
    
    <ImageButton
        android:id="@+id/title_bar_button4"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/title_bar_button4" 
        android:src="@drawable/save_icon"/>

</LinearLayout>